[gd_scene load_steps=27 format=3 uid="uid://c4w7dteo26vpo"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_sjwxk"]
[ext_resource type="Texture2D" uid="uid://cw6g1y2b7622r" path="res://Player/_tempSpritesheet.png" id="2_f6qyg"]
[ext_resource type="AudioStream" uid="uid://bmio6bonkf1wf" path="res://SFX/running-in-grass-6237.mp3" id="3_2jicg"]
[ext_resource type="PackedScene" uid="uid://cgt1nf5dr404j" path="res://Overlap/Hitbox.tscn" id="4_155eh"]
[ext_resource type="PackedScene" uid="uid://cn8qgbs33xrk3" path="res://Overlap/Hurtbox.tscn" id="5_nojkx"]
[ext_resource type="Script" path="res://Player/PlayerStats.gd" id="6_jko07"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nb1l7"]
radius = 6.0
height = 23.0

[sub_resource type="Animation" id="Animation_m0sto"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_5tyhg"]
resource_name = "_tempPlayerRunDown"
length = 1.6923
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_g2vgk"]
resource_name = "_tempPlayerRunLeft"
length = 1.6923
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_ohn6n"]
resource_name = "_tempPlayerRunRight"
length = 1.6923
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_n1oe7"]
resource_name = "_tempPlayerRunUp"
length = 1.6923
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_4qlvb"]
resource_name = "idle"
length = 2.1265
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nffgw"]
_data = {
"RESET": SubResource("Animation_m0sto"),
"_tempPlayerRunDown": SubResource("Animation_5tyhg"),
"_tempPlayerRunLeft": SubResource("Animation_g2vgk"),
"_tempPlayerRunRight": SubResource("Animation_ohn6n"),
"_tempPlayerRunUp": SubResource("Animation_n1oe7"),
"idle": SubResource("Animation_4qlvb")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0lv1f"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_anb04"]
animation = &"_tempPlayerRunDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_702hb"]
animation = &"_tempPlayerRunUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5eccb"]
animation = &"_tempPlayerRunLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m3lm7"]
animation = &"_tempPlayerRunRight"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_4vvnc"]
blend_point_0/node = SubResource("AnimationNodeAnimation_anb04")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_702hb")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_5eccb")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_m3lm7")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vacdq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e0hvw"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_et8fl"]
states/End/position = Vector2(1179, 71.3378)
states/Idle/node = SubResource("AnimationNodeAnimation_0lv1f")
states/Idle/position = Vector2(399, 71.3378)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_4vvnc")
states/Run/position = Vector2(719, 71.3378)
states/Start/position = Vector2(157, 71.3378)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_vacdq"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_e0hvw")]
graph_offset = Vector2(8, -51.057)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_jsooj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_238b6"]
radius = 8.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dlk84"]
radius = 8.0
height = 16.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_sjwxk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_f6qyg")
hframes = 5
vframes = 2
frame = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nb1l7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nffgw")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_et8fl")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_jsooj")
parameters/Run/blend_position = Vector2(-0.8704, 0.677293)

[node name="FootstepSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2jicg")

[node name="Hitbox" parent="." instance=ExtResource("4_155eh")]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape2D" parent="Hitbox" index="0"]
scale = Vector2(0.757, 0.757)
shape = SubResource("CapsuleShape2D_238b6")

[node name="Hurtbox" parent="." instance=ExtResource("5_nojkx")]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CapsuleShape2D_dlk84")
debug_color = Color(0.568627, 0.388235, 1, 0.419608)

[node name="PlayerStats" type="Node2D" parent="."]
script = ExtResource("6_jko07")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
